:bug: Fix waybar icon align

--- a/chezmoi/private_dot_config/waybar/_base.scss
+++ b/chezmoi/private_dot_config/waybar/_base.scss
@@ -1,8 +1,8 @@
 @use "variables" as *;
 
 * {
-  font-family: $font-primary, monospace;
   font-size: $font-size;
+  font-family: $font-family;
 }
 
 window#waybar {
