--- a/chezmoi/private_dot_config/waybar/_variables.scss
+++ b/chezmoi/private_dot_config/waybar/_variables.scss
@@ -1,5 +1,5 @@
-$font-primary: "Jetbrains Mono Nerd Font";
 $font-size: 14px;
+$font-family: "JetBrains Mono", "Symbols Nerd Font";
 
 $color-text: #d9d9d9;
 $color-success: #6fb348;
